--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
         <div id="introSection" class="centered-page">
             <h1><i class="fa-solid fa-shield-virus"></i> Ransomware Simulation</h1>
             <p>You will take on the role of a cybersecurity analyst and respond to an unfolding ransomware attack. The decisions you make will determine the fate of the company. Are you ready?</p>
+            <img src="giris.png" alt="Fidye yazılımı saldırısını temsil eden siber güvenlik görseli" class="scenario-image">
             <button class="btn btn-start" id="startButton"><i class="fa-solid fa-play"></i> Start Simulation</button>
         </div>
         <div id="intermissionSection" class="centered-page" style="display: none;">
