--- a/index.html
+++ b/index.html
@@ -92,6 +92,15 @@
             <h1><i class="fa-solid fa-shield-virus"></i> Ransomware Simulation</h1>
             <p>You will take on the role of a cybersecurity analyst and respond to an unfolding ransomware attack. The decisions you make will determine the fate of the company. Are you ready?</p>
             <img src="giris.png" alt="Fidye yazılımı saldırısını temsil eden siber güvenlik görseli" class="scenario-image">
+            <div class="interactive-element" style="margin-top: 30px; text-align: left;">
+    <h4><i class="fa-solid fa-people-group"></i> Your Role and Key Stakeholders</h4>
+    <ul style="list-style: none; padding: 0;">
+        <li style="margin-bottom: 10px;"><i class="fa-solid fa-user-shield" style="color:var(--accent-green); margin-right: 10px;"></i> <strong>You (Cybersecurity Analyst):</strong> You are the brain of the incident response team. You'll analyze the threat, make critical decisions, and stop the spread.</li>
+        <li style="margin-bottom: 10px;"><i class="fa-solid fa-user" style="color:var(--accent-blue); margin-right: 10px;"></i> <strong>Ms. Elif (Human Resources Employee):</strong> The first victim of the attack, but plays a critical role with her early warning.</li>
+        <li style="margin-bottom: 10px;"><i class="fa-solid fa-handshake" style="color:var(--accent-purple); margin-right: 10px;"></i> <strong>Board of Directors (CEO, CFO, Legal):</strong> The company's fate is in their hands. They need your guidance to manage financial, reputational, and legal risks.</li>
+        <li style="margin-bottom: 10px;"><i class="fa-solid fa-mask" style="color:var(--accent-red); margin-right: 10px;"></i> <strong>Cybercriminals (Threat Actors):</strong> Your relentless enemies. Their goals are financial gain and chaos.</li>
+    </ul>
+</div>
             <button class="btn btn-start" id="startButton"><i class="fa-solid fa-play"></i> Start Simulation</button>
         </div>
         <div id="intermissionSection" class="centered-page" style="display: none;">
